# SNAP

./: .gitignore  CHANGELOG.md  CITATION.cff  LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yml
docs/: 01_model_alignment.md  02_usage_for_non_python_users.md  03_reproducibility.md  04_output_files.md  05_xlsx_output.md  06_matlab_loader_output.md  07_gams_txt_matlab_exports.md  08_custom_dimensions.md  BENCHMARK_GENERATION.md
examples/: generate_100_instances.sh  generate_small_grid.sh  windows_generate_100_mixed.ps1  windows_generate_grid.ps1
matlab/: example_load_instance.m  read_snap_instance.m  read_snap_schedule.m
scripts/: generate_100_mixed_benchmark_instances.py  generate_100_pareto_template_instances.py  generate_100_pareto_template_light_instances.py  generate_100_pareto_template_ultralight_instances.py
src/snapbench/: cli.py  complexity.py  feasibility.py  gams_export.py  generator.py  io.py  matlab_export.py  matlab_txt_export.py  models.py  pareto_template.py  pareto_template_light.py  pareto_template_ultralight.py  profiles.py  symbol_export.py  xlsx_export.py
tests/: test_generator.py  test_pareto_template.py  test_pareto_template_light.py
