[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "snap-mip-instance-generator"
version = "1.9.2"
description = "Clean, reproducible, model-aligned benchmark instance generator for the Student Nurse Allocation Problem (SNAP)."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
  {name = "SNAP Research Team"}
]
keywords = ["scheduling", "benchmark", "nurse training", "SNAP", "MIP", "Taillard-inspired", "instance generator"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Topic :: Scientific/Engineering",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.scripts]
snapgen = "snapbench.cli:main"
snapbench = "snapbench.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
